crates/engine-v2/query-solver/src/tests/snapshots/engine_v2_query_solver__tests__typename__only_typename-graph.snap
---
source: engine/crates/engine-v2/query-solver/src/tests/typename.rs
expression: "digraph {\n    0 [ label = \"root\" ]\n    1 [ label = \"__typename\" ]\n    2 [ label = \"topProducts\" ]\n    3 [ label = \"Root#products\", shape=parallelogram, color=dodgerblue ]\n    4 [ label = \"topProducts#products\", shape=box, color=dodgerblue ]\n    0 -> 2 [ label = \"\" ]\n    0 -> 3 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    0 -> 3 [ label = \"\", style=dashed,arrowhead=none ]\n    3 -> 4 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    4 -> 2 [ label = \"\", color=violet,arrowhead=none ]\n    2 -> 1 [ label = \"Typename\" ]\n}\n"
---
digraph {
    0 [ root]
    1 [ __typename]
    2 [ topProducts]
    3 [ Root#products]
    4 [ topProducts#products]
    0 -> 2 [ label = "Field" ]
    0 -> 3 [ label = "CreateChildResolver" ]
    0 -> 3 [ label = "HasChildResolver" ]
    3 -> 4 [ label = "CanProvide" ]
    4 -> 2 [ label = "Provides" ]
    2 -> 1 [ label = "TypenameField" ]
}
