crates/engine-v2/query-solver/src/tests/snapshots/engine_v2_query_solver__tests__typename__only_typename-partial-solution.snap
---
source: engine/crates/engine-v2/query-solver/src/tests/typename.rs
expression: "digraph {\n    0 [ label = \"root\" ]\n    1 [ label = \"Root#products\", color=royalblue,shape=parallelogram ]\n    2 [ label = \"topProducts\" ]\n    3 [ label = \"__typename\" ]\n    0 -> 1 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    1 -> 2 [ label = \"\" ]\n    2 -> 3 [ label = \"\" ]\n}\n"
---
digraph {
    0 [ label = "root" ]
    1 [ label = "Root#products" ]
    2 [ label = "topProducts" ]
    3 [ label = "__typename" ]
    0 -> 1 [ label = "QueryPartition" ]
    1 -> 2 [ label = "Field" ]
    2 -> 3 [ label = "Field" ]
}
